--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <div class="inner">
 
         <header>
-          <h1>{{ default: site.title | default: site.github.repository_name }}</h1>
+          <h1>{{ site.title }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
         <hr>
