--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <div id="container">
       <div class="inner">
 
-        <header>
+        <header style="padding-bottom: 0;">
           <h1>{{ site.title }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
