--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css"
     integrity="sha384-yFRtMMDnQtDRO8rLpMIKrtPCD5jdktao2TV19YiZYWMDkUR5GQZR/NOVTdquEx1j" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js"
@@ -35,7 +32,7 @@
 
     <footer>
       <p>
-        <a href="https://github.com/marwahaha/qaoa-reference/edit/main/README.md">Edit this page</a> on GitHub.
+        <a href="https://github.com/marwahaha/qaoa-reference/edit/main/README.md">Edit this page</a>
       </p>
     </footer>
   </div>
