Make font smaller

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <div class="wrapper">
     <header>
       <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
-      <p class="header">Last updated <span id="update-date"></span></p>
+      <p class="header"><small>Last updated <span id="update-date"></span></small></p>
     </header>
 
     <section>
