--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
       <ul>
         <li class="download">
           <a class="buttons github" href="https://github.com/marwahaha/qaoa-reference/edit/main/README.md">Edit this
-            page</a></li>
+            page</a>
+        </li>
       </ul>
     </header>
 
