--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="wrapper" style="width:100%">
-    <header style="width:20%">
+    <header style="width:170px">
       <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
       <p>updated <span id="update-date">{{ site.data.updated.date }}</span></p>
       <ul>
