Clean up parameter setting section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
     integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
     onload="renderMathInElement(document.body);"></script>
 
+  <style>
+    p, ul, ol, table, dl {
+      margin: 0 0 10px;
+    }
+  </style>
   {% include head-custom.html %}
 </head>
 
