Remove extra spacing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,16 +20,21 @@
     p, ul, ol, table, dl {
       margin: 0 0 10px;
     }
+    @media print, screen and (min-width: 960px) {
+      .section {
+        margin-left: 300px;
+      }
+    }
   </style>
   {% include head-custom.html %}
 </head>
 
 <body>
   <div class="wrapper" style="width:100%">
-    <header style="width:170px">
+    <header style="width:170px; padding-left: 25px">
       <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
       <p>updated <span id="update-date">{{ site.data.updated.date }}</span></p>
-      <ul>
+      <ul style="position: initial">
         <li class="download">
           <a class="buttons github" href="https://github.com/marwahaha/qaoa-reference/edit/main/README.md">Edit this
             page</a>
@@ -37,7 +42,7 @@
       </ul>
     </header>
 
-    <section style="width:70%">
+    <section style="width:inherit">
       {{ content }}
     </section>
   </div>
