--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       margin: 0 0 10px;
     }
     @media print, screen and (min-width: 960px) {
-      .section {
+      section {
         margin-left: 300px;
       }
     }
