Make table for extensions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       </ul>
     </header>
 
-    <section style="width:inherit">
+    <section style="width: initial">
       {{ content }}
     </section>
   </div>
